<resources>
    <string name="app_name">PortfolioApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_my_nano_degree">My Nanodegree Apps!</string>
    <string name="app_sportify_streamer">SPORTIFY STREAMER</string>
    <string name="label_scores_app">SCORES APP</string>
    <string name="label_library_app">LIBRARY APP</string>
    <string name="label_build_it_bigger">BUILD IT BIGGER</string>
    <string name="label_bacon_reader">BACON READER</string>
    <string name="sportify_message">Opening Sportify Stream app</string>
    <string name="score_app_message">Opening Score app</string>
    <string name="library_app_message">Opening Library app</string>
    <string name="build_it_bigger_message">Why not build it bigger!</string>
    <string name="bacon_reader_message">Opening Bacon Reader app</string>
    <string name="capstone_app_message">Opening Capstone my own app</string>
</resources>
